# curious_table_explorer

./: CMakeLists.txt  TODO  mainpage.dox  package.xml  setup.py
action/: SurroundPoint.action
config/: table_detection.org  tabletop_find_clusters.ork
include/: backjump.h  collector.h  common.h  incremental_view_icp.h  model.h  model_constructor.h  table_tracker.h  uniform_color_distribution.h
include/curious_table_explorer/: collector.h  common.h  model.h  model_constructor.h  recognizer.h  table_tracker.h
include/pcl/registration/: meta_icp.h
include/pcl/registration/impl/: meta_icp.hpp
include/utils/: averaging_meta_icp.h  backjump.h  convert.h  uniform_color_distribution.h
include/utils/impl/: averaging_meta_icp.hpp
launch/: client.launch  curious_table_explorer.launch  curious_table_explorer_from_bag.launch  infrastructure.launch  ork_tabletop.launch  tabletop.launch
msg/: ObservedTable.msg  RegisteredObject.msg  RegisteredPointCloud.msg
python/: finalize_table_srv.py  my_tabletop_segmentation.py  object_recognition_action_server.py  surround_point.py  surrounder.py  table_patrol.py  tabletop_segmentation.py  tabletop_segmentation_server.py
scripts/: record_bag.sh
src/: CMakeLists.txt  Clusters2PoseResults.cpp  collect_object_views.cpp  collector.cpp  convert.cpp  incremental_view_icp.cpp  model.cpp  model_constructor.cpp  module.cpp  recognize_registered_objects.cpp  recognizer.cpp  table_tracker.cpp
