<package>
  <name>my_table_objects</name>
  <version>0.0.1</version>
  <description>Build Table Object Representations from Autonomous Runs</description>
  <author>Michael Goerner</author>
  <maintainer email="mgoerner@uni-osnabrueck.de">Michael Goerner</maintainer>
  <license>BSD</license>

  <url></url>

  <build_depend>ecto</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>opencv_candidate</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <run_depend>ecto</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>opencv_candidate</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
