<package>
  <name>curious_table_explorer</name>
  <version>1.0.0</version>
  <description>Build Table Object Representations from Autonomous Runs</description>
  <author>Michael Goerner</author>
  <maintainer email="mgoerner@uni-osnabrueck.de">Michael Goerner</maintainer>
  <license>GPL</license>

  <url></url>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_pcl</run_depend>
  <run_depend>ecto_ros</run_depend>
  <run_depend>uos_ecto_cells</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>move_base_straight</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
